# phonlab

./: .readthedocs.yaml  README.md  README.rst  lsa25.yml  pyproject.toml  setup.py
doc/source/: acoustphon.rst  conf.py  index.rst  util.rst
docs/: requirements.txt
docs/source/: acoustphon.rst  articphon.rst  audphon.rst  conf.py  corpora.rst  index.rst  prep_audio.rst  textgrids.rst  util.rst
examples/: Find values that meet a condition or threshold.ipynb  Praat formant measurements continued.ipynb  Praat formant measurements.ipynb  generic_formant.csv  mono.TextGrid  phonetic_datasets.ipynb  praat-equivalents.md  tidy.ipynb
examples/loadsig/: loadsig.ipynb
phonlab/: __init__.py
phonlab/acoustic/: amp_env.py  get_f0_.py  sgram_.py  track_formants_.py
phonlab/artic/: egg2oq_.py
phonlab/auditory/: add_noise_.py  audspec.py  noise_vocoder.py  sigcor.py
phonlab/data/example_audio/: im_twelve.TextGrid
phonlab/utils/: get_signal_.py  phonlablib.py  prep_audio_.py  signal.py  srt2tg_.py  tidy.py  utils.py
test/: test_module.ipynb
